tests/spectest/binary_leb128_64.bin.wast
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
  "\01\04\00\0a\97\80\80\80\00\01\91\80\80\80\00\00"
  "\42\00\28\02\ff\ff\ff\ff\ff\ff\ff\ff\ff\01\1a\0b"
)
(module instance)
(assert_malformed
  (module binary
    "\00\61\73\6d\01\00\00\00\01\04\01\60\00\00\03\02"
    "\01\00\05\03\01\04\00\0a\13\01\11\00\42\00\28\02"
    "\ff\ff\ff\ff\ff\ff\ff\ff\ff\02\1a\0b"
  )
  "integer too large"
)
